--- a/_includes/header.html
+++ b/_includes/header.html
@@ -28,7 +28,7 @@
         </div>
       </nav>
     {%- endif -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}"><image src="/images/Logo-klein.png"/></a -->
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}"><image src="/images/Logo-banner.png"/></a -->
   </div>
   
 </header>
