mit Impressum und Datenschutzerklärung

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -22,11 +22,11 @@
       </div>
 
       <div class="footer-col footer-col-2">
-        {%- include social.html -%}
+        <a href="/impressum/">Impressum</a>
       </div>
 
       <div class="footer-col footer-col-3">
-        <p>{{- site.description | escape -}}</p>
+        <a href="/datenschutz/">Datenschutz</a>
       </div>
     </div>
 
