--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -252,3 +252,8 @@ table {
     border: 1px solid $grey-color-light;
   }
 }
+
+/* Ergänzungen Burkhard */
+span.unsichtbar {
+    display: none;
+}
