--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -132,6 +132,7 @@
   float: left;
   margin-bottom: $spacing-unit / 2;
   padding-left: $spacing-unit / 2;
+  font-size: $small-font-size;
 }
 
 .footer-col-1 {
