Verwendung von "Lightbox" für Bildergalerien, vergrößerte Bilder

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,4 +11,9 @@
   {%- if jekyll.environment == 'production' and site.google_analytics -%}
     {%- include google-analytics.html -%}
   {%- endif -%}
+
+  <!-- Lightbox (für "responsive" Bilder-Links) -->
+  <link rel="stylesheet" href="{{ "/assets/lightbox.min.css" | relative_url }}"/>
+  <script src="/assets/lightbox-plus-jquery.min.js"></script>
+  
 </head>
