--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,6 +18,7 @@
         </label>
 
         <div class="trigger">
+          <a class="page-link" href="{{ "/" | relative_url }}">Start</a>
           <a class="page-link" target="_blank" href="https://www.biblino.de/westerheim">Online-Katalog</a>
           {%- for path in page_paths -%}
             {%- assign my_page = site.pages | where: "path", path | first -%}
