--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -7,7 +7,18 @@
   min-height: $spacing-unit * 1.865;
 
   // Positioning context for the mobile navigation icon
-  position: relative;
+  //position: relative;
+  // Burkhard
+  position: sticky;
+  top: 0;
+  //height: 250px;
+  height: auto;
+  width: 100%;
+  background: #fff;
+}
+
+.small-logo {
+  height: 150px;
 }
 
 .site-title {
