--- a/_includes/header.html
+++ b/_includes/header.html
@@ -29,7 +29,9 @@
         </div>
       </nav>
     {%- endif -%}
-    <a class="site-title" rel="author" href="{{ "/" | relative_url }}"><image class="site-logo" src="/images/Logo-Homepage.png"/></a>
+    <a class="site-title" rel="author" href="{{ "/" | relative_url }}">
+      <image class="site-logo" src="/images/Logo-Homepage.png"/>
+    </a>
   </div>
   
 </header>
